--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
     <repositories>
         <repository>
-            <id>mavenCentral</id>
-            <url>https://repo1.maven.org/maven2/</url>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com/</url>
         </repository>
         <repository>
             <id>plotly.kt_1</id>
@@ -48,6 +48,10 @@
         <repository>
             <id>plotly.kt_6</id>
             <url>https://kotlin.bintray.com/kotlinx</url>
+        </repository>
+        <repository>
+            <id>plotly.kt_7</id>
+            <url>https://dl.bintray.com/mipt-npm/kscience</url>
         </repository>
     </repositories>
 
@@ -232,6 +236,11 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.12</version>
-        </dependency>
+	</dependency>
+       <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>kotlin-css-jvm</artifactId>
+         <version>1.0.0-pre.109-kotlin-1.3.72</version>
+       </dependency>
     </dependencies>
 </project>
