--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,7 +11,7 @@ rest.baseUrl=https://petstore3.swagger.io/api/v3
 ## ServiceCalls
 ##
 ##################################################################
-service.call.packages=com.onit.service_calls
+service.call.packages=hr.onit.service_calls
 
 
 ##################################################################
@@ -26,7 +26,7 @@ output.fileName=/tmp/agency/result_plot.html
 ## Test configuration
 ##
 ##################################################################
-initial.random.service.call=com.onit.service_calls.PetStoreFindByStatusCall
+initial.random.service.call=hr.onit.service_calls.PetStoreFindByStatusCall
 result.error.threshold=5
 call.delay.sec=3
 simulation.step.delay.sec=1
