--- a/src/main/resources/defaults.properties
+++ b/src/main/resources/defaults.properties
@@ -5,15 +5,6 @@
 ##################################################################
 rest.baseUrl=https://petstore3.swagger.io/api/v3
 
-
-##################################################################
-##
-## ServiceCalls
-##
-##################################################################
-service.call.packages=hr.onit.service_calls
-
-
 ##################################################################
 ##
 ## Output
@@ -26,7 +17,7 @@ output.fileName=/tmp/agency/result_plot.html
 ## Test configuration
 ##
 ##################################################################
-initial.random.service.call=hr.onit.service_calls.PetStoreFindByStatusCall
+initial.random.service.call=hr.onit.agency.service_calls.PetStoreFindByStatusCall
 result.error.threshold=5
 call.delay.sec=3
 simulation.step.delay.sec=1
